--- a/src/XelsDesktopWalletApp/Views/Pages/SendPages/SelsPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/SendPages/SelsPage.xaml
@@ -5,68 +5,64 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages.SendPages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="500" d:DesignWidth="800"
       Title="SelsPage">
 
-    <StackPanel Background="White" Margin="100 5">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <!--Address-->
-            <Border Grid.Row="0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>                       
-                    </Grid.RowDefinitions>
+    <Grid Background="White" Margin="10,10,10,10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <!--Address-->
+        <Border Grid.Row="0" Margin="20,0,20,0">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" Content="To Address" />
+                <Label Grid.Row="0" FontSize="20" Content="To Address" Margin="0,0,0,36" />
 
-                    <TextBox Grid.Row="1" x:Name="textToAddress" BorderBrush="#FFC9D6C9" />
+                <TextBox x:Name="textToAddress" BorderBrush="#FFC9D6C9" Margin="0,36,0,0" Grid.RowSpan="2" />
 
-                </Grid>
-            </Border>
+            </Grid>
+        </Border>
 
-            <!--Amount-->
-            <Border Grid.Row="1">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+        <!--Amount-->
+        <Border Grid.Row="1" Margin="20,0,20,0">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" Content="Amount"/>
-
-                   
-                    <TextBox Grid.Row="1" x:Name="textAmount"  BorderBrush="#FFC9D6C9"  />
-
-                </Grid>
-            </Border>
+                <Label Grid.Row="0" FontSize="20" Content="Amount"/>
+                <TextBox Grid.Row="1" x:Name="textAmount"  BorderBrush="#FFC9D6C9"  />
+            </Grid>
+        </Border>
 
 
-            <Border Grid.Row="2" Margin="0 10">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        
-                    </Grid.ColumnDefinitions>                
+        <Border Grid.Row="2" Margin="0 10">
+            <Grid Margin="26,0,24,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
 
-                    <Button Grid.Column="0" x:Name="sendButton" Click="SendButton_Click"  Content="Send Now" Padding="2" 
+                </Grid.ColumnDefinitions>
+
+                <Button Grid.Column="0" x:Name="sendButton" FontSize="20" Click="SendButton_Click"  Content="Send Now" Padding="2" 
                         Background="Green"  
                         Foreground="White" >
-                        <Button.Resources>
-                            <Style TargetType="{x:Type Border}">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
 
-                </Grid>
-            </Border>
+            </Grid>
+        </Border>
 
-        </Grid>
-    </StackPanel>
+    </Grid>
+
 </Page>
